terraform/main.tf
terraform {
  required_providers {
    azurerm = {
      source  = "hashicorp/azurerm"
      version = "3.53.0"
    }
    tls = {
      source  = "hashicorp/tls"
      version = "~>4.0"
    }
  }
}

provider "azurerm" {
  features {}
  skip_provider_registration = true
}
resource "azurerm_virtual_network" "example" {
  name                = "example-network"
  address_space       = ["10.0.0.0/16"]
  location            = var.resource_group_location
  resource_group_name = var.resource_group_name
}

resource "azurerm_subnet" "example" {
  name                 = "internal"
  resource_group_name  = var.resource_group_name
  virtual_network_name = azurerm_virtual_network.example.name
  address_prefixes     = ["10.0.2.0/24"]
}

resource "azurerm_public_ip" "example" {
  name                = "example-public-ip"
  resource_group_name = var.resource_group_name
  location            = var.resource_group_location
  allocation_method   = "Static"
  sku                 = "Standard"
}

resource "azurerm_network_security_group" "example" {
  name                = "example-nsg"
  location            = var.resource_group_location
  resource_group_name = var.resource_group_name

  # Allow SSH (port 22)
  security_rule {
    name                       = "AllowSSH"
    priority                  = 1000
    direction                 = "Inbound"
    access                    = "Allow"
    protocol                  = "Tcp"
    destination_port_range    = "22"
    source_port_range         = "*"  # Added source port range
    source_address_prefix     = "*"
    destination_address_prefix = "*"
  }
  
  # Allow ICMP
  security_rule {
    name                       = "AllowICMP"
    priority                  = 1001
    direction                 = "Inbound"
    access                    = "Allow"
    protocol                  = "Icmp"  # Fixed the case for ICMP protocol
    source_port_range         = "*"  # Allow all source ports
    destination_port_range    = "*"  # Set destination port range to "*" for ICMP
    destination_address_prefix = "*"
    source_address_prefix     = "*"
  }


  # Allow HTTP (port 80)
  security_rule {
    name                       = "AllowHTTP"
    priority                  = 1010
    direction                 = "Inbound"
    access                    = "Allow"
    protocol                  = "Tcp"
    destination_port_range    = "80"
    source_port_range         = "*"
    source_address_prefix     = "*"
    destination_address_prefix = "*"
  }

  # Allow HTTPS (port 443)
  security_rule {
    name                       = "AllowHTTPS"
    priority                  = 1020
    direction                 = "Inbound"
    access                    = "Allow"
    protocol                  = "Tcp"
    destination_port_range    = "443"
    source_port_range         = "*"
    source_address_prefix     = "*"
    destination_address_prefix = "*"
  }


  # Allow Kubernetes NodePort range (30000-32767)
  security_rule {
    name                       = "AllowK8sNodePortRange"
    priority                  = 1030
    direction                 = "Inbound"
    access                    = "Allow"
    protocol                  = "Tcp"
    destination_port_range    = "30000-32767"
    source_port_range         = "*"
    source_address_prefix     = "*"
    destination_address_prefix = "*"
  }
}

resource "azurerm_network_interface" "example" {
  name                = "example-nic"
  location            = var.resource_group_location
  resource_group_name = var.resource_group_name

  ip_configuration {
    name                          = "internal"
    subnet_id                     = azurerm_subnet.example.id
    private_ip_address_allocation = "Dynamic"
    public_ip_address_id          = azurerm_public_ip.example.id
  }
}

resource "azurerm_network_interface_security_group_association" "example" {
  network_interface_id      = azurerm_network_interface.example.id
  network_security_group_id = azurerm_network_security_group.example.id
}

resource "tls_private_key" "example_ssh" {
  algorithm = "RSA"
  rsa_bits  = 4096
}

resource "azurerm_linux_virtual_machine" "example" {
  name                = "example-machine"
  resource_group_name = var.resource_group_name
  location            = var.resource_group_location
  size                = "Standard_B2s"

  admin_username      = "sajjad"
  admin_password      = "Sajjadhz345#$%"

  network_interface_ids = [azurerm_network_interface.example.id]

  # SSH key for authentication
  admin_ssh_key {
    username   = "sajjad"  # Replace with your desired SSH username
    public_key = file("~/.ssh/id_rsa.pub")  # Make sure this is the correct path to your public key
  }

  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Standard_LRS"
  }

  source_image_reference {
    publisher = "Canonical"
    offer     = "0001-com-ubuntu-server-jammy"
    sku       = "22_04-lts-gen2"
    version   = "latest"
  }

  disable_password_authentication = false
}
